<resources>
    <string name="app_name">World Atlas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_data">Loading data…</string>
    <string name="africa">Africa</string>
    <string name="americas">Americas</string>
    <string name="asia">Asia</string>
    <string name="europe">Europe</string>
    <string name="oceania">Oceania</string>
    <string name="select_continent">Select continent</string>
    <string name="capital">Capital:</string>
    <string name="area">Area:</string>
    <string name="population">Population:</string>
    <string name="timezones">Timezones:</string>
    <string name="borders_with">Borders with:</string>
    <string name="currencies">Currencies:</string>
    <string name="languages">Languages:</string>
    <string name="no_data">No data!</string>
    <string name="no_db_detected">No database detected! Please turn on your internet connection and restart app.</string>
</resources>
